@@ -379,6 +379,11 @@ Test Cases
   stop iterating if at least 'tests.iter.min' ran and a failure occured. 
   (Shai Erera, Chris Hostetter)
 
+Build
+
+* LUCENE-3006: Building javadocs will fail on warnings by default.  Override with -Dfailonjavadocwarning=false (sarowe, gsingers)
+
+
 ======================= Lucene 3.x (not yet released) =======================
 
 Changes in backwards compatibility policy
